Update Patterns.ask() interactions
User a direct OnComplete callback instead of declaring a local variable.
Makes for cleaner code.

Change-Id: I0b147a660d4e54c68eec3f7471251bfe40b989ab
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>